@@ -12,6 +12,7 @@ image was being scanned for parent directory information.
 - 2993767: Slow FAT listings of OrphanFiles because hunt for parent
 directory resulted in many searches for OrphanFiles.  Added cache
 of OrphanFiles.
+- 2999567: ifind was not stopping after first hit.
 
 ---------------- VERSION 3.1.1 --------------
 
